--- a/show_clustering_examples.ipynb
+++ b/show_clustering_examples.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "## Idealized segmentation\n",
-    "We generate sample data with 3 clusters, nicely separated from one another. K-means does a perfect job clustering these three groups. The dendrogram also shows a clear point to cut the tree: the long lines from height ~1.2 to ~2.5 shows the three subgroups are far apart, such that you'd have to bridge a long distance between the subgroups before joining them together. That indicates the groups should probably be separate."
+    "We generate sample data with 3 clusters, nicely separated from one another. K-means does a perfect job clustering these three groups. The hierarchical dendrogram also shows a clear point to cut the tree: the long lines from height ~1.2 to ~2.5 shows the three subgroups are far apart, such that you'd have to bridge a long distance between the subgroups before joining them together. That indicates the groups should probably be separate."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "source": [
     "## Realistic segmentation\n",
-    "In reality, data tends to be continuous without clear boundaries between subgroups of the population. It is up to the team to figure out what a valuable segmentation looks like in this case, as statistically there is no clear winner. As also quoted in the readme ([source](http://joelcadwell.blogspot.com/2014/03/)):\n",
+    "In reality, data tends to be continuous without perfectly clear boundaries between subgroups of the population. It is up to the team to figure out what a valuable segmentation looks like in this case, as statistically there is no clear winner. As also quoted in the readme ([source](http://joelcadwell.blogspot.com/2014/03/)):\n",
     "\n",
     "> If there is variability in our data, a cluster analysis will yield partitions. Given a partitioning, a data analyst will magnify those differences by focusing on contrastive comparisons and assigning evocative names. Once we have names, especially if those names have high imagery, can we be blamed for the reification of minor distinctions?\n",
     "\n",
